@@ -43,6 +43,7 @@ OPCDUMP_FNAME     "/OPC_DUMP"
 MEMDUMP_FNAME     "/MEMORY_DUMP"
 OBJECTS           "objects"
 OPCODES           "opcodes"
+OUT_OF_MEMORY_CATCH "catch() error: Out of memory.\n"
 OUT_OF_MEMORY     "(s)sprintf() error: Out of memory.\n"
 PERCENT           "%"
 PERCENT_S         "%s"
@@ -61,6 +62,7 @@ TRACE             "trace"
 TRACEPREFIX       "traceprefix"
 UNDEFINED         "UNDEFINED"
 UNKNOWN_LAMBDA    "<lambda ?>"
+UNKNOWN_OBJECT     "<object ?>"
 VARIABLES         "variables"
 
     /* Privilege violation names */
